# dfisan-test-suite

./: .gitignore  BuildOptions.md  CMakeLists.txt  README.md  experiment.md  recompile_and_run_all_tests.sh
AttackDetection/: CMakeLists.txt  README.md  safe_alloc.h
AttackDetection/cbench/: CMakeLists.txt  overwrite.h
AttackDetection/cbench/other_object/return_address/: CMakeLists.txt
AttackDetection/datarace/: CMakeLists.txt  global_race.c  global_race2.c  heap_race.c  mutexset1.c  mutexset2.c  mutexset3.c  mutexset4.c  mutexset5.c  mutexset6.c  mutexset7.c  mutexset8.c  race_on_heap.c  same_func_race.c  simple_race.c  simple_read_write_race.c  simple_write_read_race.c  stack_race.c  stack_race2.c  test.h  tiny_race.c
AttackDetection/datarace/support/: CMakeLists.txt  aligned_vs_unaligned_race.c  atomic_norace.c  multi_forked_threads.c  pthread_barrier.c  sync_by_flag.c  tsan-vs-gvn.c
AttackDetection/memory/: CMakeLists.txt  char_struct_overflow.c  global_overflow.c  global_overread.c  global_struct_overflow.c  global_struct_overread.c  heap_overflow.c  heap_overread.c  heap_reallocated_uaf.c  heap_struct_overflow.c  heap_struct_overread.c  heap_uaf.c  local_overflow.c  local_overread.c  local_struct_overflow.c  local_struct_overread.c  longjmp_overflow.c  longjmp_overread.c  overflow_in_call.c  overread_struct_defined_by_memcpy.c  short_struct_overflow.c  stack_reallocated_uaf.c  stack_uaf.c  static_overflow.c  static_overread.c  static_struct_overflow.c  static_struct_overread.c  struct_head_ptr_overflow.c  struct_head_ptr_overflow1.c  struct_head_ptr_overflow2.c  struct_head_ptr_overflow3.c  struct_nest_overread3.c  subobject_overflow_in_call2.c
AttackDetection/memory/field/: CMakeLists.txt  global_struct_overflow.c  global_struct_overread1.c  global_struct_overread2.c  heap_reallocated_struct_uaf.c  heap_struct_overflow.c  heap_struct_overread1.c  heap_struct_overread2.c  heap_struct_uaf.c  non_sequential_struct_overflow.c  non_sequential_struct_overread.c  stack_reallocated_struct_uaf.c  stack_struct_overflow.c  stack_struct_overread1.c  stack_struct_overread2.c  stack_struct_uaf.c  static_struct_overflow.c  static_struct_overread1.c  static_struct_overread2.c  struct_double_free.c  struct_head_ptr_overflow3.c  struct_head_ptr_overflow4.c  struct_head_ptr_overread3.c  struct_head_ptr_overread4.c  struct_in_arr_overflow2.c  struct_in_arr_overflow3.c  struct_in_arr_overread2.c  struct_in_arr_overread3.c  struct_memory_leak.c  struct_nest_overflow4.c  struct_nest_overflow5.c  struct_nest_overflow6.c  struct_nest_overread4.c  struct_nest_overread5.c  struct_nest_overread6.c  util.h
AttackDetection/memory/other_object/: double_free.c  global_overflow.c  global_overread.c  heap_overflow.c  heap_overread.c  heap_reallocated_uaf.c  heap_uaf.c  memory_leak.c  non_sequential_overflow.c  non_sequential_overread.c  stack_overflow.c  stack_overread.c  stack_reallocated_uaf.c  stack_uaf.c  static_overflow.c  static_overread.c  struct_head_ptr_overflow1.c  struct_head_ptr_overflow2.c  struct_head_ptr_overread1.c  struct_head_ptr_overread2.c  struct_in_arr_overflow1.c  struct_in_arr_overread1.c  struct_nest_overflow1.c  struct_nest_overflow2.c  struct_nest_overflow3.c  struct_nest_overread1.c  struct_nest_overread2.c  struct_nest_overread3.c
AttackDetection/memory/support/: CMakeLists.txt  global_ptr_def_use.c  heap_ptr_def_use.c  local_ptr_def_use.c  malloc_wrapper.c  struct_init.c
AttackDetection/memory/tmp/: overflow_in_call.c  overread_struct_defined_by_memcpy.c  struct_head_ptr_overflow5.c  subobject_overflow_in_call.c
AttackDetection/memory/tmp/return_address/: CMakeLists.txt
AttackDetection/movec/: _RV_memsafe.c  _RV_memsafe.h
Splash-3/: Makefile.config
experiment/: CMakeLists.txt  README.md  safe_alloc.h
experiment/find_max/: CMakeLists.txt  find_max.c  run_find_max.py  sensitive_struct.h
experiment/find_min_max/: CMakeLists.txt  find_min_max.c  no_support_find_min_max.c  run_find_min_max.py
experiment/insertion_sort/: CMakeLists.txt  (+3 more)
utils/: average-asan.py  average.py  compare_spec2006.py  plot_bar.py  print_stat.py  run_find_max.py  run_find_min_max.py  run_insertion_sort.py  run_phoenix_apps.py  run_spec2006.py  time_stat.py
(+93 files in other folders)
